[package]
name = "Sand-Drop-Clicker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
futures-util = "0.3.31"
ggegui = "0.4.0"
ggez = "0.9.3"
rand = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
